Colocado icone no Selfhosted

--- a/DanielDevToolsSelfHosted/DanielDevToolsSelfHosted.csproj
+++ b/DanielDevToolsSelfHosted/DanielDevToolsSelfHosted.csproj
@@ -77,5 +77,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="favicon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
